--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ nav {
     position: relative;
     display: flex;
     flex-direction: column;
-    top: -8rem;
+    top: -12rem;
     justify-content: center; /* Centraliza verticalmente */
     align-items: center; /* Centraliza horizontalmente */
     height: 100vh; /* Faz a altura da seção ocupar toda a viewport */
@@ -233,4 +233,80 @@ section .header {
 
 .content {
     padding: 20px;
+}
+
+
+section {
+    margin: 2rem 0;
+}
+
+section h2.header {
+    color: #fff;
+    text-align: center;
+    font-size: 2.5rem;
+    padding: 16px;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+section p {
+    color: #ccc;
+    margin: 1rem 0;
+    line-height: 1.6;
+    text-align: center; /* Centraliza o texto */
+}
+
+section ul {
+    list-style-type: disc; /* Estilo de lista */
+    padding-left: 20px; /* Espaçamento à esquerda */
+    margin: 1rem 0; /* Margem vertical */
+}
+
+section ul li {
+    margin: 0.5rem 0; /* Espaçamento entre os itens da lista */
+}
+
+.features {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    margin: 2rem 0;
+}
+
+.features .card {
+    background-color: #9d23ee;
+    padding: 1.5rem;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.features .card:hover {
+    background-color: #9d23ee7c; /* Mudança de cor no hover */
+}
+
+.features .card h4 {
+    margin: 0.5rem 0;
+    font-weight: 500;
+}
+
+.features .card a {
+    margin-top: auto; /* Para empurrar o link para o final do cartão */
+}
+
+.sub-header {
+    max-width: 600px;
+    margin: auto;
+    text-align: center;
+    color: #ccc;
+}
+
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #070308;
+    color: #fff; /* Cor do texto padrão */
 }
